# puffgres

./: .gitignore  Cargo.toml  README.md  design.md  install.sh  justfile
.github/workflows/: docs.yml  format.yml  fuzz-benchmark.yml  integration-tests.yml  sustained-throughput.yml  test.yml  unit-tests.yml  wiki.yml
crates/cli/: Cargo.toml
crates/cli/src/: apply.rs  check.rs  dry_run.rs  dry_transform.rs  env.rs  error.rs  generate.rs  init.rs  lib.rs  main.rs  new.rs  observability.rs  paths.rs  project_config.rs  remove.rs  reset.rs  run.rs  setup.rs  shutdown.rs  status.rs  test_utils.rs  tombstone.rs  tombstones.rs  validate.rs
crates/cli/src/pipeline/: backfill.rs  dlq.rs  mod.rs  setup.rs  streaming.rs
crates/cli/templates/: Dockerfile  config.toml  dockerignore  package.json  transform-baseten.ts  transform-cloudflare.ts  transform-together.ts  transform-zeroentropy.ts  transform.ts
crates/cli/templates/utils/: embed-baseten.ts  embed-cloudflare.ts  embed-with-together.ts  embed-zeroentropy.ts  embed.ts  load-env.ts  puffgres.ts  tokenize.ts  truncate-to-tokens.ts
crates/cli/tests/: apply_integration.rs  dry_run_integration.rs  dry_run_no_configs.rs  dry_run_no_configs_integration.rs  generate_integration.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  error.rs  lib.rs  loader.rs  validation.rs
crates/config/tests/fixtures/: empty_path.toml  film.toml  filtered.toml  full.toml  id_int.toml  id_string.toml  id_uint.toml  id_uuid.toml  invalid_id_type.toml  invalid_name.toml  invalid_version.toml  malformed.toml  missing_id_section.toml  missing_id_type.toml  other_name_user_namespace.toml  valid.toml
crates/core/: Cargo.toml
crates/core/src/: action.rs  backfill.rs  backoff.rs  error.rs  id.rs  js_transform.rs  lib.rs  mapping.rs  router.rs  row_convert.rs  test_sink.rs  transform.rs
crates/core/tests/: backfill_integration.rs  load_fanout.rs  resumption_integration.rs
crates/core/tests/common/: mod.rs
crates/core/tests/fixtures/: valid.toml
crates/debug/: Cargo.toml
crates/debug/src/: server.rs  ui.html
crates/inspect/: Cargo.toml
crates/inspect/src/: server.rs  ui.html
crates/pg/: Cargo.toml  README.md
crates/pg/src/: batch.rs  column.rs  connect.rs  error.rs  lib.rs  lsn.rs  publication.rs  sample.rs  schema_bootstrap.rs  slot.rs  test_utils.rs
crates/pg/tests/: batch_integration.rs  column_integration.rs  connect_integration.rs  publication_integration.rs  schema_bootstrap_integration.rs  slot_integration.rs  state_tables_integration.rs
crates/pg/tests/common/: mod.rs
crates/puff/: Cargo.toml
crates/puff/src/: client.rs  error.rs  lib.rs  mock_server.rs
crates/puff/tests/: chaos_sink.rs
crates/replication/: Cargo.toml
crates/replication/benches/: decoder_bench.rs  stream_bench.rs
crates/replication/src/: connection.rs  decoder.rs  error.rs  event.rs  lib.rs  relation.rs  stream.rs
crates/replication/tests/: load_backpressure.rs  load_latency.rs  load_oom_boundary.rs  load_recovery.rs  load_sub_batch.rs  schema_change_integration.rs
crates/state/: Cargo.toml
crates/state/benches/: checkpoint_bench.rs
crates/state/migrations/2026-02-27-204807-0000_create_configs/: up.sql
crates/state/migrations/2026-02-27-204807-0001_create_streaming_checkpoints/: down.sql  up.sql
crates/state/migrations/2026-02-27-204807-0002_create_backfill_progress/: down.sql  up.sql
crates/state/migrations/2026-02-27-204807-0003_create_dlq/: down.sql  up.sql
crates/state/migrations/2026-03-02-002647-0000_add_tombstone_to_configs/: down.sql  up.sql
crates/state/migrations/2026-03-02-030000-0000_add_namespace_prefix_to_configs/: down.sql  up.sql
crates/state/migrations/2026-03-02-161912-0000_0004_widen_config_version/: down.sql  up.sql
crates/state/migrations/2026-03-07-000000-0000_timestamps_to_epoch_millis/: down.sql  up.sql
crates/state/migrations/2026-03-18-000000-0004_create_runtime_state/: down.sql  up.sql
crates/state/migrations/2026-04-14-143855-0000_add_operation_to_dlq/: down.sql  up.sql
crates/state/migrations/2026-05-20-000000_init/: down.sql  up.sql
crates/state/src/: backfill.rs  configs.rs  db.rs  dlq.rs  epoch.rs  error.rs  lib.rs  pg_lsn.rs  postgres.rs  schema.rs  store.rs  streaming_checkpoint.rs  test_helpers.rs
crates/state/src/models/: backfill.rs  configs.rs  dlq.rs  mod.rs  streaming_checkpoints.rs
crates/state/tests/: chaos_sqlite.rs  postgres_state_store_integration.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture-notes.md  command-reference.md  configuration.md  contributing.md  creating-your-first-config.md  deploying.md  environment.md  getting-started.md  guarantees.md  introduction.md  meta-notes.md
examples/buyer_name/: config.toml  schema.ts  transform.ts
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_decoder/: begin  commit  delete_simple  insert_binary  insert_null_unchanged  insert_simple  relation_multi_col  relation_simple  truncate  update_no_old
fuzz/fuzz_targets/: fuzz_decoder.rs  fuzz_document_id.rs  fuzz_relation_cache.rs  generate_seeds.rs
scripts/: generate-wiki.sh
