[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-blocking-client", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
