[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "http-json", "reqwest-blocking-client", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
diesel = { version = "2.3", features = ["sqlite"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = ">=0.17.2, <0.36.0", features = ["bundled"] }
