[package]
name = "puffgres-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "puffgres"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
pg.workspace = true
puff.workspace = true
puffgres-debug.workspace = true
puffgres-core.workspace = true
replication.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
state.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true

[features]
test-utils = ["dep:tempfile"]

[dependencies.tempfile]
workspace = true
optional = true

[dev-dependencies]
chrono.workspace = true
config.workspace = true
pg = { workspace = true, features = ["test-utils"] }
puffgres-cli = { path = ".", features = ["test-utils"] }
temp-env.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
