[package]
name = "puffgres-core"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
derive_more = { version = "2.1.1", features = ["display"] }
pg = { path = "../pg" }
replication = { path = "../replication" }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
