[package]
name = "puffgres-core"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
config.workspace = true
derive_more.workspace = true
pg.workspace = true
rand.workspace = true
replication.workspace = true
serde.workspace = true
state.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-postgres.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
chrono.workspace = true
pg = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
toml.workspace = true
