[package]
name = "puffgres-debug"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
puff = { path = "../puff" }
replication = { path = "../replication" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
