[package]
name = "puffgres-debug"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
puff.workspace = true
replication.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream.workspace = true
