[package]
name = "pg"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio-postgres.workspace = true
tokio-postgres-rustls-improved.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true }

[features]
test-utils = ["dep:testcontainers", "dep:testcontainers-modules"]

[dev-dependencies]
pg = { path = ".", features = ["test-utils"] }
replication.workspace = true
