[package]
name = "puff"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
puffgres-core = { path = "../core" }
rs-puff = { version = "0.1.1", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt"] }
uuid = { version = "1.20.0", features = ["v4"] }
