[package]
name = "replication"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
base64 = "0.22.1"
pgwire-replication = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
