[package]
name = "replication"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
base64.workspace = true
pgwire-replication.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[features]
test-utils = []

[dev-dependencies]
replication = { path = ".", features = ["test-utils"] }
pg = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-postgres.workspace = true
proptest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
sysinfo = "0.35"

[[bench]]
name = "decoder_bench"
harness = false

[[bench]]
name = "stream_bench"
harness = false
