[package]
name = "replication"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
base64.workspace = true
pgwire-replication.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
pg = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-postgres.workspace = true
proptest.workspace = true
