[package]
name = "state"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
diesel.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
pg.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true

[dev-dependencies]
pg = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "checkpoint_bench"
harness = false
