[package]
name = "state"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
byteorder = "1.5"
chrono = { workspace = true, features = ["serde"] }
diesel.workspace = true
diesel_migrations.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
